# assertions

./: CMakeLists.txt  README.md
cmake/Modules/: FindLLVM.cmake
include/: Assertions.h
instrumentation/: AssertionBase.h  Assertions.c  CMakeLists.txt
instrumenter/: CMakeLists.txt  Callee.cpp  Callee.h  Caller.cpp  Caller.h  Common.cpp  Common.h  main.cpp
plugin/: CMakeLists.txt
plugin/AnnotateVariables/: CMakeLists.txt
scripts/: Makefile  compile.d  env.d  env.d.example
